Images added to app. And now it plays gifs in start workout!!!

--- a/app/src/main/res/layout/activity_start_workout.xml
+++ b/app/src/main/res/layout/activity_start_workout.xml
@@ -8,151 +8,7 @@
     android:orientation="vertical"
     tools:context="com.example.gleative.workit.StartWorkoutActivity">
 
-    <!--<android.support.constraint.ConstraintLayout-->
-        <!--android:id="@+id/constraintLayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <!--<android.support.design.widget.AppBarLayout-->
-            <!--android:id="@+id/appBarLayout"-->
-            <!--android:layout_width="368dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--app:layout_constraintBottom_toTopOf="@+id/current_exercise_name"-->
-            <!--tools:layout_editor_absoluteX="8dp">-->
-
-            <!--&lt;!&ndash;Lager en toolbar&ndash;&gt;-->
-            <!--<android.support.v7.widget.Toolbar-->
-                <!--android:id="@+id/toolbar"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="?attr/actionBarSize"-->
-                <!--app:layout_scrollFlags="scroll|enterAlways"-->
-                <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
-                <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />-->
-            <!--&lt;!&ndash;Linje 25 gjør at baren på toppen går vekk når du scroller&ndash;&gt;-->
-        <!--</android.support.design.widget.AppBarLayout>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/current_exercise_name"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Exercise Name"-->
-            <!--android:textSize="20sp"-->
-            <!--android:textStyle="bold"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/appBarLayout"-->
-            <!--app:layout_constraintBottom_toTopOf="@+id/exercises_done"-->
-            <!--tools:layout_editor_absoluteX="125dp" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/exercises_done"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Exercises done: "-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/current_exercise_name"-->
-            <!--tools:layout_editor_absoluteX="142dp" />-->
-
-        <!--&lt;!&ndash;Divider&ndash;&gt;-->
-        <!--<View-->
-            <!--android:id="@+id/divider_1"-->
-            <!--android:layout_width="368dp"-->
-            <!--android:layout_height="2dp"-->
-            <!--android:layout_marginTop="4dp"-->
-            <!--android:background="@android:color/background_dark"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/exercises_done"-->
-            <!--tools:layout_editor_absoluteX="8dp" />-->
-
-        <!--<ImageView-->
-            <!--android:id="@+id/current_exercise_picture"-->
-            <!--android:layout_width="368dp"-->
-            <!--android:layout_height="252dp"-->
-            <!--android:src="@drawable/e1_1"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/divider_1"-->
-            <!--tools:layout_editor_absoluteX="8dp" />-->
-
-        <!--<View-->
-            <!--android:id="@+id/divider_2"-->
-            <!--android:layout_width="368dp"-->
-            <!--android:layout_height="2dp"-->
-            <!--android:background="@android:color/background_dark"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/current_exercise_picture"-->
-            <!--tools:layout_editor_absoluteX="8dp" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/reps_text"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="20dp"-->
-            <!--android:text="Reps:"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/divider_2"-->
-            <!--tools:layout_editor_absoluteX="175dp" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/current_exercise_reps"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:textSize="50sp"-->
-            <!--android:text="XX"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/reps_text"-->
-            <!--tools:layout_editor_absoluteX="161dp" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/sets_text"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:text="Sets:"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-
-            <!--app:layout_constraintTop_toBottomOf="@+id/current_exercise_reps"-->
-            <!--app:layout_constraintVertical_bias="0.0"-->
-            <!--tools:layout_editor_absoluteX="177dp" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/current_exercise_sets"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="XX/XX"-->
-            <!--android:textSize="50sp"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/sets_text"-->
-            <!--tools:layout_editor_absoluteX="119dp"-->
-            <!--app:layout_constraintBottom_toTopOf="@+id/continue_button"/>-->
-
-        <!--<Button-->
-            <!--android:id="@+id/continue_button"-->
-            <!--android:layout_width="300dp"-->
-            <!--android:layout_height="90dp"-->
-            <!--android:layout_marginBottom="4dp"-->
-            <!--android:background="@color/colorRed"-->
-            <!--android:text="continue button"-->
-            <!--android:onClick="proceedInWorkout"-->
-            <!--android:textColor="#ffffff"-->
-            <!--app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/current_exercise_sets"-->
-            <!--tools:layout_editor_absoluteX="42dp" />-->
-
-    <!--</android.support.constraint.ConstraintLayout>-->
-
-        <!--<android.support.design.widget.CoordinatorLayout-->
-            <!--android:id="@+id/constraintLayout"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent">-->
-
-            <android.support.design.widget.AppBarLayout
+    <android.support.design.widget.AppBarLayout
                 android:id="@+id/appBarLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -166,8 +22,7 @@
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
                 <!--Linje 25 gjør at baren på toppen går vekk når du scroller-->
-            </android.support.design.widget.AppBarLayout>
-        <!--</android.support.design.widget.CoordinatorLayout>-->
+    </android.support.design.widget.AppBarLayout>
 
         <TextView
             android:id="@+id/current_exercise_name"
@@ -193,12 +48,19 @@
             android:layout_marginTop="4dp"
             android:background="@android:color/background_dark" />
 
-        <ImageView
-            android:id="@+id/current_exercise_picture"
+        <!--<ImageView-->
+            <!--android:id="@+id/current_exercise_picture"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="250dp"-->
+            <!--android:src="@drawable/e1_1"-->
+            <!--android:layout_gravity="center"/>-->
+
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/current_exercise_gif"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:src="@drawable/e1_1"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:src="@drawable/loading_training"/>
 
         <!--Divider-->
         <View
