--- a/app/src/main/res/layout/fragment_exercise_info.xml
+++ b/app/src/main/res/layout/fragment_exercise_info.xml
@@ -30,7 +30,7 @@
                         android:id="@+id/exercise_picture"
                         android:layout_width="match_parent"
                         android:layout_height="256dp"
-                        android:scaleType="centerCrop"
+                        android:scaleType="fitXY"
                         app:layout_collapseMode="parallax"
                         app:layout_collapseParallaxMultiplier="0.9"
                         android:src="@drawable/testpicture"/>
@@ -42,13 +42,22 @@
                     android:layout_height="?attr/actionBarSize"
                     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:layout_scrollFlags="scroll|enterAlways"/>
+                    app:layout_scrollFlags="scroll|enterAlways">
+                </android.support.v7.widget.Toolbar>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
                     android:gravity="bottom|end">
+
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:textSize="20dp"-->
+                        <!--android:textColor="#000"-->
+                        <!--android:text="WorkIt"/>-->
                     <!--gravity bottom|end makes so it is in the right bottom corner-->
                     <ToggleButton
                         android:layout_width="50dp"
