--- a/app/src/main/res/layout/list_exercises.xml
+++ b/app/src/main/res/layout/list_exercises.xml
@@ -42,12 +42,14 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/exercise_thumb_1"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="end"
             android:src="@drawable/e12_1"
             />
         <ImageView
+            android:id="@+id/exercise_thumb_2"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginLeft="3dp"
