Some error handling has been added to workout, and exercise

--- a/app/src/main/res/layout/activity_my_workout_info.xml
+++ b/app/src/main/res/layout/activity_my_workout_info.xml
@@ -10,23 +10,47 @@
     android:focusableInTouchMode="true">
     <!--line 9 and 10, makes so the edit text isnt instantly focused when entering the activity-->
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_workout_name"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <EditText
+                android:id="@+id/selected_workout_name"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:text="Workout name"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="#ffff"
+                android:singleLine="true"
+                android:background="@color/colorRed"
+                android:textColorHighlight="#000"/>
+
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+        <!--<EditText-->
+            <!--android:id="@+id/selected_workout_name"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="60dp"-->
+            <!--android:paddingStart="5dp"-->
+            <!--android:text="Workout name"-->
+            <!--android:textSize="24sp"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textColor="#ffff"-->
+            <!--android:singleLine="true"-->
+            <!--android:background="@color/colorRed"-->
+            <!--android:textColorHighlight="#000"/>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/selected_workout_name"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:paddingStart="5dp"
-            android:text="Workout name"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:textColor="#ffff"
-            android:singleLine="true"
-            android:background="@color/colorRed"
-            android:textColorHighlight="#000"/>
 
         <EditText
             android:id="@+id/selected_workout_desc"
