--- a/app/src/main/res/layout/fragment_create_custom_exercise.xml
+++ b/app/src/main/res/layout/fragment_create_custom_exercise.xml
@@ -7,92 +7,11 @@
     android:orientation="vertical"
     tools:context="com.example.gleative.workit.CreateCustomExerciseActivity">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/selected_exercise_picture"-->
-        <!--android:layout_width="368dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:src="@drawable/e12_1"-->
-        <!--tools:layout_editor_absoluteY="0dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/selected_exercise_name"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Exercise Name"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/selected_exercise_picture"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/selected_exercise_body_part"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Body Part"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/selected_exercise_name"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
-
-    <!--<EditText-->
-        <!--android:id="@+id/sets"-->
-        <!--android:layout_width="50dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:hint="Sets"-->
-        <!--android:inputType="number"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/selected_exercise_body_part"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--app:layout_constraintRight_toRightOf="parent" />-->
-
-    <!--<EditText-->
-        <!--android:id="@+id/reps"-->
-        <!--android:layout_width="50dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:hint="Reps"-->
-        <!--android:inputType="number"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/sets"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
-
-    <!--<Button-->
-        <!--android:id="@+id/add_custom_exercise"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Add Exercise"-->
-        <!--android:onClick="addCustomExerciseToWorkout"-->
-        <!--android:layout_marginTop="173dp"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/reps"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!--Lager en toolbar-->
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_execise_name"
             android:layout_width="match_parent"
@@ -100,32 +19,46 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
-        <!--Linje 25 gjør at baren på toppen går vekk når du scroller-->
+
     </android.support.design.widget.AppBarLayout>
 
-    <ImageView
-        android:id="@+id/selected_exercise_picture"
-        android:layout_width="368dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/selected_exercise_picture1"
+            android:layout_width="368dp"
+            android:layout_height="200dp"
+            android:src="@drawable/e12_1"
+            android:layout_weight="1"
+            />
+
+        <ImageView
+            android:id="@+id/selected_exercise_picture2"
+            android:layout_width="368dp"
+            android:layout_height="200dp"
+            android:src="@drawable/e12_2"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_gravity="center"
-        android:src="@drawable/e12_1" />
-
-    <!--<TextView-->
-        <!--android:id="@+id/selected_exercise_name"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:text="Exercise Name"-->
-        <!--android:layout_marginTop="8dp"/>-->
+        android:text="Body Part:"/>
 
     <TextView
         android:id="@+id/selected_exercise_body_part"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"
         android:layout_gravity="center"
-        android:text="Body Part"
-        android:layout_marginTop="8dp" />
+        android:text="Body Part" />
 
     <EditText
         android:id="@+id/sets"
@@ -133,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:hint="Sets"
-        android:inputType="number" />
+        android:inputType="number"/>
 
     <EditText
         android:id="@+id/reps"
@@ -146,7 +79,8 @@
     <Button
         android:id="@+id/add_custom_exercise"
         android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="50dp"
         android:background="@color/colorRed"
         android:textColor="#ffffff"
         android:text="add exercise"
