--- a/app/src/main/res/layout/activity_my_workout_info.xml
+++ b/app/src/main/res/layout/activity_my_workout_info.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,110 +11,123 @@
     android:focusableInTouchMode="true">
     <!--line 9 and 10, makes so the edit text isnt instantly focused when entering the activity-->
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_workout_name"
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-            <EditText
-                android:id="@+id/selected_workout_name"
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_workout_name"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:text="Workout name"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:textColor="#ffff"
-                android:singleLine="true"
-                android:background="@color/colorRed"
-                android:textColorHighlight="#000"/>
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-        </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
+                <EditText
+                    android:id="@+id/selected_workout_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:text="Workout name"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:textColor="#ffff"
+                    android:singleLine="true"
+                    android:maxLength="50"
+                    android:background="@color/colorRed"
+                    android:textColorHighlight="#000"
+                    />
 
-        <!--<EditText-->
-            <!--android:id="@+id/selected_workout_name"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="60dp"-->
-            <!--android:paddingStart="5dp"-->
-            <!--android:text="Workout name"-->
-            <!--android:textSize="24sp"-->
-            <!--android:textStyle="bold"-->
-            <!--android:textColor="#ffff"-->
-            <!--android:singleLine="true"-->
-            <!--android:background="@color/colorRed"-->
-            <!--android:textColorHighlight="#000"/>-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/selected_workout_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="Workout Desc"/>
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.AppBarLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/update_workout_button"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/selected_workout_desc"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorRed"
-                android:textColor="#ffff"
-                android:text="Update"
-                android:onClick="updateWorkout"
-                android:visibility="gone"/>
-            <Button
-                android:id="@+id/cancel_update_workout_button"
-                android:layout_width="wrap_content"
+                android:textSize="15sp"
+                android:text="Workout Desc"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorRed"
-                android:layout_marginStart="5dp"
-                android:textColor="#ffff"
-                android:text="Cancel"
-                android:onClick="cancelUpdateWorkout"
-                android:visibility="gone"/>
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+
+                <Button
+                    android:id="@+id/update_workout_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorRed"
+                    android:textColor="#ffff"
+                    android:text="Update"
+                    android:onClick="updateWorkout"
+                    android:visibility="gone"/>
+                <Button
+                    android:id="@+id/cancel_update_workout_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorRed"
+                    android:layout_marginStart="5dp"
+                    android:textColor="#ffff"
+                    android:text="Cancel"
+                    android:onClick="cancelUpdateWorkout"
+                    android:visibility="gone"/>
+            </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <fragment
-            android:id="@+id/myWorkout_info_fragment"
+        <!--FAB must be inside coordinator layout so they move up when snackbar shows up-->
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/coord"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:name="com.example.gleative.workit.fragments.WorkoutCustomExercisesListFragment"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:layout="@layout/fragment_exercise_list" />
+            android:layout_height="wrap_content">
+
+            <fragment
+                android:id="@+id/myWorkout_info_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:name="com.example.gleative.workit.fragments.WorkoutCustomExercisesListFragment"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                tools:layout="@layout/fragment_exercise_list" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_delete_exercise_from_workout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="150dp"
+                android:layout_marginEnd="16dp"
+                android:onClick="selectExerciseToRemoveFromWorkout"
+                android:src="@drawable/ic_delete"
+                android:backgroundTint="@color/colorRed"
+                android:visibility="invisible"/>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_add_exercise_to_workout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="90dp"
+                android:layout_marginEnd="16dp"
+                android:onClick="addNewCustomExerciseToWorkout"
+                android:src="@drawable/ic_action_add"
+                android:backgroundTint="#00b200"
+                android:visibility="invisible"/>
 
 
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="20dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:onClick="addNewCustomExerciseToWorkout"
-            android:src="@drawable/ic_action_add"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_edit_workout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:onClick="displayOtherFabButtons"
+                android:src="@drawable/ic_edit"/>
 
-    </FrameLayout>
-
+        </android.support.design.widget.CoordinatorLayout>
 
 </LinearLayout>
