--- a/app/src/main/res/layout/list_exercises.xml
+++ b/app/src/main/res/layout/list_exercises.xml
@@ -19,7 +19,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1">
         <!--Weight makes the size of the object bigger-->
@@ -45,15 +45,15 @@
             android:id="@+id/exercise_thumb_1"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_gravity="end"
+            android:layout_gravity="center|end"
             android:src="@drawable/e12_1"
             />
         <ImageView
             android:id="@+id/exercise_thumb_2"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginLeft="3dp"
-            android:layout_gravity="end"
+            android:layout_marginStart="3dp"
+            android:layout_gravity="center|end"
             android:src="@drawable/e12_2"/>
 
     </LinearLayout>
