--- a/app/src/main/res/layout/list_workout.xml
+++ b/app/src/main/res/layout/list_workout.xml
@@ -17,14 +17,14 @@
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_gravity="start"
+            android:layout_gravity="center|start"
             android:paddingEnd="10dp"
             android:src="@drawable/ic_dumbbell"
             />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1">
             <!--Weight makes the size of the object bigger-->
@@ -50,24 +50,14 @@
 
             </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/img_delete_workout"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_gravity="center|end"
                 android:src="@drawable/ic_delete"/>
 
-            <ImageView
-                android:id="@+id/img_edit_workout"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_edit"/>
-
-        </LinearLayout>
 
     </LinearLayout>
 
