--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -34,17 +34,6 @@
             android:onClick="createWorkout"
             android:src="@drawable/ic_action_add"/>
 
-        <pl.droidsonroids.gif.GifImageView
-            android:id="@+id/loading_icon"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/loading_training"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            />
-
-
-
         <fragment
             android:id="@+id/workout_list_fragment"
             android:layout_width="match_parent"
@@ -58,7 +47,7 @@
 
 
 
-    <!--Gjør at vi får navigation drawer i denne aktivitien-->
+    <!--Navigation drawer-->
     <fragment
         android:id="@+id/navigation_drawer_fragment"
         android:name="com.example.gleative.workit.fragments.NavigationDrawerFragment"
