--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -8,6 +8,7 @@
     tools:context="com.example.gleative.workit.MyWorkoutActivity">
 
     <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout_my_workouts"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <android.support.design.widget.AppBarLayout
