App now works for older APIs! Gifs are now stored inside the app! So it loads fast. New loading spinner is created, this doesnt slow the user experience!

--- a/app/src/main/res/layout/fragment_exercise_list.xml
+++ b/app/src/main/res/layout/fragment_exercise_list.xml
@@ -9,4 +9,11 @@
         android:layout_height="match_parent"/>
     <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
 
+    <ProgressBar
+        android:id="@+id/progress_bar_exercises"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+
 </RelativeLayout>
