--- a/app/src/main/res/layout/activity_my_workout_info.xml
+++ b/app/src/main/res/layout/activity_my_workout_info.xml
@@ -93,6 +93,8 @@
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 tools:layout="@layout/fragment_exercise_list" />
 
+            <!--Notice "app" is used instead of "android" in background tint. -->
+            <!--This is so it supports older APIs or else it will crash for other phones-->
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab_delete_exercise_from_workout"
                 android:layout_width="wrap_content"
@@ -102,7 +104,7 @@
                 android:layout_marginEnd="16dp"
                 android:onClick="selectExerciseToRemoveFromWorkout"
                 android:src="@drawable/ic_delete"
-                android:backgroundTint="@color/colorRed"
+                app:backgroundTint="@color/colorRed"
                 android:visibility="invisible"/>
 
             <android.support.design.widget.FloatingActionButton
@@ -114,7 +116,7 @@
                 android:layout_marginEnd="16dp"
                 android:onClick="addNewCustomExerciseToWorkout"
                 android:src="@drawable/ic_action_add"
-                android:backgroundTint="#00b200"
+                app:backgroundTint="#00b200"
                 android:visibility="invisible"/>
 
 
