--- a/app/src/main/res/layout/fragment_exercise_info.xml
+++ b/app/src/main/res/layout/fragment_exercise_info.xml
@@ -36,33 +36,14 @@
                         android:src="@drawable/testpicture"/>
                 <!--</android.support.v4.view.ViewPager>-->
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/exercise_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:layout_scrollFlags="scroll|enterAlways">
-                </android.support.v7.widget.Toolbar>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:gravity="bottom|end">
-
-                    <!--<TextView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:textSize="20dp"-->
-                        <!--android:textColor="#000"-->
-                        <!--android:text="WorkIt"/>-->
-                    <!--gravity bottom|end makes so it is in the right bottom corner-->
-                    <ToggleButton
-                        android:layout_width="50dp"
-                        android:layout_height="50dp" />
-                </LinearLayout>
+                <!--<android.support.v7.widget.Toolbar-->
+                    <!--android:id="@+id/exercise_name"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="?attr/actionBarSize"-->
+                    <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
+                    <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
+                    <!--app:layout_scrollFlags="scroll|enterAlways">-->
+                <!--</android.support.v7.widget.Toolbar>-->
 
             </android.support.design.widget.CollapsingToolbarLayout>
             <!--EVERYTHING AFTER THIS WILL BE PINNED, (Inside AppBarLayout)-->
@@ -85,6 +66,32 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
             <!--app:layout_behavior and value makes so its under the AppBarLayout!-->
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="18dp">
+
+                <TextView
+                    android:id="@+id/exercise_name_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:paddingStart="15dp"
+                    android:text="Exercise Name"
+                    android:textSize="25sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/exercise_body_part_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="-10dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:paddingStart="15dp"
+                    android:text="Body Part"/>
+
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -99,6 +106,8 @@
                         android:text="Desc"
                         android:padding="5dp"/>
             </android.support.v7.widget.CardView>
+
+            </LinearLayout>
 
         </android.support.v4.widget.NestedScrollView>
 
