--- a/app/src/main/res/layout/activity_workout_done.xml
+++ b/app/src/main/res/layout/activity_workout_done.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.gleative.workit.WorkoutDoneActivity">
+    tools:context="com.example.gleative.workit.WorkoutDoneActivity"
+    >
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -22,10 +23,12 @@
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
     </android.support.design.widget.AppBarLayout>
 
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Exercises skipped: "/>-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Exercises skipped: "
+        android:layout_gravity="center"
+        />
 
     <!--<TextView-->
         <!--android:layout_width="match_parent"-->
