--- a/app/src/main/res/layout-land/activity_start_workout.xml
+++ b/app/src/main/res/layout-land/activity_start_workout.xml
@@ -96,6 +96,12 @@
                 android:textSize="55sp"
                 android:layout_gravity="center"/>
 
+            <TextView
+                android:id="@+id/timer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="swag"/>
+
             <Button
                 android:id="@+id/continue_button"
                 android:layout_width="100dp"
