--- a/app/src/main/res/layout-land/activity_workout_done.xml
+++ b/app/src/main/res/layout-land/activity_workout_done.xml
@@ -59,71 +59,116 @@
         app:layout_constraintTop_toBottomOf="@id/workout_complete_text" />
 
 
-        <TextView
-            android:id="@+id/fastest_exercise_name_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Fastest exercise: "
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/time_used_text" />
+    <!-- For some reason I had to have it inside a constraintlayout for it to center -->
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/fastest_exercise_name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="270dp"
             android:layout_height="wrap_content"
-            android:text="fastest exercise name"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fastest_exercise_name_text" />
+            android:orientation="vertical"
+            android:gravity="center">
 
-        <TextView
-            android:id="@+id/fastest_exercise_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="time"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fastest_exercise_name" />
+            <TextView
+                android:id="@+id/fastest_exercise_name_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="Fastest exercise: "
+                android:textSize="18sp"
+                app:layout_constraintBottom_toTopOf="@+id/fastest_exercise_name"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/time_used_text" />
 
-        <TextView
-            android:id="@+id/longest_exercise_name_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Longest exercise: "
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fastest_exercise_time" />
+            <TextView
+                android:id="@+id/fastest_exercise_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="fastest exercise name"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/fastest_exercise_time"
+                app:layout_constraintEnd_toEndOf="@+id/fastest_exercise_name_text"
+                app:layout_constraintStart_toStartOf="@+id/fastest_exercise_name_text"
+                app:layout_constraintTop_toBottomOf="@+id/fastest_exercise_name_text" />
 
-        <TextView
-            android:id="@+id/longest_exercise_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="longest exercise name"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/longest_exercise_name_text" />
+            <TextView
+                android:id="@+id/fastest_exercise_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="time"
+                app:layout_constraintBottom_toTopOf="@+id/continue_button"
+                app:layout_constraintEnd_toEndOf="@+id/fastest_exercise_name"
+                app:layout_constraintStart_toStartOf="@+id/fastest_exercise_name"
+                app:layout_constraintTop_toBottomOf="@+id/fastest_exercise_name" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/longest_exercise_time"
-            android:layout_width="wrap_content"
+    </android.support.constraint.ConstraintLayout>
+
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="270dp"
             android:layout_height="wrap_content"
-            android:text="time"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/longest_exercise_name" />
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <TextView
+                android:id="@+id/longest_exercise_name_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Longest exercise: "
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/longest_exercise_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="longest exercise name"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/longest_exercise_time"
+                app:layout_constraintEnd_toEndOf="@+id/longest_exercise_name_text"
+                app:layout_constraintTop_toBottomOf="@+id/longest_exercise_name_text" />
+
+            <TextView
+                android:id="@+id/longest_exercise_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="time"
+                app:layout_constraintBottom_toTopOf="@+id/continue_button"
+                app:layout_constraintEnd_toEndOf="@+id/longest_exercise_name"
+                app:layout_constraintStart_toStartOf="@+id/longest_exercise_name"
+                app:layout_constraintTop_toBottomOf="@+id/longest_exercise_name" />
+
+        </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
+
+
 
     <Button
         android:id="@+id/continue_button"
         android:layout_width="200dp"
-        android:layout_height="40dp"
+        android:layout_height="70dp"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="20dp"
         android:background="@color/colorRed"
@@ -133,5 +178,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 
 </android.support.constraint.ConstraintLayout>
